--- a/views/pemilik/index.ejs
+++ b/views/pemilik/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title><%= pemilik %></title>
+    <title>pemilik</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   </head>
   <body>
@@ -25,9 +25,6 @@
     </nav>
     <div class="container">
       <h1>Pemilik</h1>
-      <% if (messages.success){ %>
-      <div class="alert alert-info" role="alert"><%- messages.success %></div>
-      <% } %>
       <div class="row">
         <div class="col">
           <a href="/pemilik/create" class="btn btn-sm btn-success">tambah</a>
